--- a/src/stylesheets/insightSection.css
+++ b/src/stylesheets/insightSection.css
@@ -54,6 +54,10 @@
 
 }
 
+.insight-info-div{
+  margin-left: auto;
+}
+
 
 
 @media (max-width: 800px) {
@@ -75,6 +79,8 @@
     order: 1;
     margin-top: 65px;
     direction: ltr;
+    margin-left: 0;
+
 
   }
 
@@ -103,6 +109,8 @@
     order: 1;
     margin-top: 65px;
     direction: ltr;
+    margin-left: 0;
+
 
   }
 
